refacto: refacto et création méthode filtre mois graph